--- a/styles/base.css
+++ b/styles/base.css
@@ -68,11 +68,9 @@ p {
 
 blockquote {
     border-left: 5px solid #0D7377;
-    padding: 15px 0 15px 15px;
     background-color: #313131;
     border-radius: 4px;
     width: 100%;
-    margin: 0.4em 0;
 }
 
 blockquote p {
@@ -112,12 +110,12 @@ a:visited {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
 }
 
 .content {
-    width: 100%;
     max-width: 720px;
+    width: 100%;
+    width: -moz-available;
 }
 
 .content > * {
@@ -130,6 +128,7 @@ a:visited {
 
 .header,
 .footer {
+    max-height: 67px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -137,6 +136,7 @@ a:visited {
     justify-content: space-between;
     background-color: #0D7377;
     color: white;
+    overflow: hidden;
 }
 
 .header a,
@@ -181,9 +181,6 @@ a:visited {
 }
 
 hr {
-    height: 1px;
-    color: #fff;
-    opacity: 50%;
     margin: 15px 0;
 }
 
@@ -345,7 +342,7 @@ hr {
     grid-row-gap: 8px;
     grid-column-gap: 8px;
     width: 100%;
-    padding: 15px 30px;
+    margin: 15px 30px;
 }
 
 .post-card {
